re #2112, fixed sizing of rr container because 50px were getting cut off the bottom of the page hiding the paging buttons.

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -2670,6 +2670,11 @@ ul .collapse li:last-of-type {
     position: relative;
 }
 
+.related-resources-editor-container .content-panel {
+    height: calc(100vh - 100px);
+}
+
+
 .edit-panel {
     position: absolute;
     top: 0;
